--- a/app/src/main/res/layout/activity_cs.xml
+++ b/app/src/main/res/layout/activity_cs.xml
@@ -65,6 +65,7 @@
         android:layout_height="60dp">
 
         <TextView
+            android:id="@+id/cs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
